/*
  Cosmo Dashboard API
  Manipulate cosmo dashboard resource API
*/

syntax = "proto3";

package dashboard.v1alpha1;

message TemplateRequiredVars {
  string var_name = 1;
  string default_value = 2;
}

message Template {
  string name = 1;

  string description = 2;

  repeated TemplateRequiredVars required_vars = 3;

  optional bool is_default_user_addon = 4;

  bool is_cluster_scope = 5;
}
