/*
  Cosmo Dashboard API
  Manipulate cosmo dashboard resource API
*/

syntax = "proto3";

package dashboard.v1alpha1;

import "validate/validate.proto";

message User {
  string name = 1;
  string display_name = 2;
  repeated string roles = 3;
  string auth_type = 4;
  repeated UserAddon addons = 5;
  string default_password = 6;
  string status = 7;
  optional string raw = 8;
  optional DeletePolicy delete_policy = 9 [(validate.rules).enum.defined_only = true];
}

message UserAddon {
  string template = 1          [(validate.rules).string = { min_len: 1 }];
  bool cluster_scoped = 2;
  map<string, string> vars = 3;
  optional string raw = 4;
}

enum DeletePolicy {
  delete = 0;
  keep = 1;
}